# signalstack

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  signalstack_v1_budget_blueprint_v1_1.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_phase2a_core_market_schema.py  0002_phase2b_news_signal_execution_raw_events.py  0003_phase6_contract_selection.py  0004_pipeline_query_indexes.py  0005_pipeline_idempotency_constraints.py  0006_market_query_indexes_and_raw_marketaux.py  0007_integrity_fks_and_checks.py  0008_timescale_retention.py  0009_alert_next_retry_at.py
app/: main.py  main_workers.py
app/alerts/: formatter.py  telegram.py  worker.py
app/api/: deps.py
app/contracts/: selector.py
app/core/: config.py  desktop_state.py  logging.py  market_data_freshness.py  watchlist.py
app/db/: session.py
app/desktop/: __init__.py  __main__.py  controller.py  instance_lock.py  js_api.py  log_buffer.py  system.py  system_probes.py  window.py
app/execution/: alpaca_broker.py  metrics_worker.py  order_router.py  position_manager.py  worker.py
app/ingest_market/: alpaca_bar_worker.py  alpaca_chain_snapshot_worker.py  bar_aggregator.py  chain_snapshot_worker.py  tradier_worker.py
app/ingest_news/: edgar_worker.py  label_worker.py  marketaux_worker.py  rss_worker.py  symbol_lookup.py
app/llm/: anthropic_client.py  ollama_client.py  prefilter.py  prompt.py
app/providers/: base.py  (+1 more)
scripts/: backfill_daily_metrics.py  seed_symbols.py
tests/: conftest.py  test_health.py
web/: SignalStack.html
(+102 files in other folders)
