[project]
name = "signalstack"
version = "0.1.0"
description = "Personal options-alert research engine (news + price + options flow) for a small set of liquid U.S. large-caps."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.32.0,<0.33",
    "sqlalchemy>=2.0.36,<2.1",
    "alembic>=1.14.0,<1.15",
    "psycopg[binary]>=3.2.3,<3.3",
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.7.0,<3.0",
    "httpx>=0.28.0,<0.29",
    "feedparser>=6.0.11,<7.0",
    "python-telegram-bot>=21.9,<22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4,<9.0",
    "pytest-asyncio>=0.25.0,<0.26",
    "ruff>=0.8.4,<0.9",
    "httpx>=0.28.0,<0.29",
    "respx>=0.21.0,<0.22",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line length enforced by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that require a running TimescaleDB instance",
]

